/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-09-12  Gilles Dumortier <dgil at ieee.org>
	* Live : FMP Buy/Sell is inversed  (SF bug 1557356)
	* Live : exception because Notebook can be limited (SF bug 1557368)
	* Live : freeze before Euronext opening (SF bug 1552404 Patch1)

2006-09-0x  Michel Legrand <m_leg at users.sourceforge.net>
	* check every quote (euronext,alternext) with the new live connector !

2006-08-3x  Gilles Dumortier <dgil at ieee.org>
	* Many fixes around the new Euronext live connector

2006-08-20  Gilles Dumortier <dgil at ieee.org>
	* Live connector for Euronext market is working again !

2006-07-17  Gilles Dumortier <dgil at ieee.org>
	* switch from numarray to numpy (0.9.8)

2006-06-12  Gilles Dumortier <dgil at ieee.org>
	* Filter the NYSE symbol list (CUSIP better management)
	* List of quotes : add filter by market (SF bug 1504296)
	* List of quotes : MMI to update the list (SF bug 1504485)
	* Import list plugin : NYSE (part of SF bug 1504294)

2006-06-11  Gilles Dumortier <dgil at ieee.org>
	* Import list plugin : Euronext (SF bug 1485056)

2006-06-04  Gilles Dumortier <dgil at ieee.org>
	* AbcBourse plugin : display correct time of trades (SF bug 1498701)
	* Yahoo plugin : display correct time of trades (SF bug 1498701)

2006-06-04  Gilles Dumortier <dgil at ieee.org>
	* Yahoo plugin : ask and bid (SF bug 1497343). Activate live for yahoo
	* News : scan / clear button definitions (SF bug 1480417)
	* main currency in portfolio editing : use a combobox also
	* NYSE and LSE + filter market name using combobox (SF bug 1473358)
	* itrade_import.py was not working anymore ?! typo ?!

2006-06-03  Gilles Dumortier <dgil at ieee.org>
	* Context Help in wxDialog (SF bug 1410679)

2006-06-01  Gilles Dumortier <dgil at ieee.org>
	* currency front-end (SF bug 1470719)