@@ -1,5 +1,83 @@
-FR0000064594;NANCY
-FR0000064602;NANCY
-FR0005159175;LYON
-FR0000060618;027
-FR0000064784;NANCY
+FR0000062507;028;Fin.Etang Berre Pf;;EBPF
+FR0005142999;032;Eaux De Douai;;MLEAU
+FR0007200100;030;Eaux De Royan;;MLEDR
+FR0005310463;029;Est Republicain;;MLEST
+FR0000060428;027;Cie Du Mont Blanc;;MLCMB
+FR0000063307;032;Tayninh;;TAYN
+FR0000124232;032;Irdnordpasdecalais;;DP
+FR0000063513;032;Trsp Nord-Pierchon;;PIER
+FR0000065393;030;Courtois;;COUR
+FR0000065260;030;Dock.Petr.Ambes Am;;DPAM
+FR0000060535;027;Fiducial Real Est.;;ORIA
+FR0000060154;027;Smoby;;SMO
+FR0000060196;027;Manuf.St-Chamond;;MSCH
+FR0000063265;032;R-Siic;;FFBE
+FR0000061111;027;Thermador Group;;THEP
+FR0000039240;027;Toupargel Agrigel;;TOU
+FR0000077158;031;Vet Affaires;;VET
+FR0000065450;030;Technofan;;TNFN
+FR0000062176;028;Agricole Crau;;AGCR
+FR0004016699;028;Smtpc;;SMTPC
+FR0000064222;029;Fala;;FALA
+FR0000064578;029;Fonc.Des Regions;;DREG
+FR0000064388;029;Tonna Electronique;;TONN
+FR0000044489;027;Setforge;;SETF
+FR0000061137;027;Burelle;;BUR
+FR0000061731;027;Hyparlo;006173;HYP
+FR0000064164;029;Exacompta Clairef.;;EXAC
+FR0000060618;027;Rallye
+FR0005159175;LYON;MLDUC
+FR0000064784;NANCY;Fonc Fin Particip
+FR0000064594;NANCY;Adt Siic
+FR0000064602;NANCY;Acanthe
+FR0000061137;027;Burelle;;BUR
+FR0000060071;027;Samse;;SAMS
+FR0000060329;027;Psb Industries;;PSB
+FR0000124703;027;Cegid S.A.;;CGD
+FR0000061582;027;Siparex Croissance;;SIX
+FR0000060824;027;Clayeux;;CLAY
+FR0004044337;027;Osiatis;;OSA
+FR0000045262;027;Crcam Midicci;;CRMI
+FR0000061202;027;Intl Andre Trigano;;TRIG
+FR0004037125;027;April Group;;APR
+FR0000045346;027;Crcam Sud R.A.Cci;;CRSU
+FR0000061244;027;Mecelec;;MCLC
+FR0000061566;027;Sofco;;SOFC
+FR0000060907;027;Chausseria;;CHSR
+FR0000060832;027;Precia;;PREC
+FR0000060402;027;Sechilienne Sidec;;SECH
+FR0000060121;027;Sabeton;;SABE
+FR0000060303;027;Fonciere Des Murs;;FMU
+FR0000051831;027;Groupe Guillin;;GIL
+FR0000061178;027;Distriborg Groupe;;BORG
+FR0000066672;027;Gl Events;;GLO
+FR0000044497;027;Sam;;SAMP
+FR0000124570;027;Plastic Omnium;;POM
+FR0000060790;027;Signaux Girod;;GIRO
+FR0000045239;027;Crcam Loire Hte L.;;CRLO
+FR0000044323;028;Crcam Alp.Prov.Cci;;CRAP
+FR0000062184;028;Idsud;;IDSU
+FR0000062234;028;Financiere Odet;;ODET
+FR0000062341;028;Fin.Etang Berre;;BERR
+FR0000062101;028;Ferm.Cas.Mun.Canne;;FCMC
+FR0000064214;029;Gantois;;GANT
+FR0000064560;029;Cfcal Banque;;CFCL
+FR0000064255;029;Rocamat;;ROCA
+FR0000064123;029;Baccarat;;BCRA
+FR0000065401;030;Adc Siic;;ALDV
+FR0000045544;030;Toul.Midi-Toul.Cci;;CAMT
+FR0000065526;030;Banque Tarneaud;;TRNO
+FR0000065484;030;Lectra;;LSS
+FR0000065435;030;Biscuits Gardeil;;GARD
+FR0000185506;031;Crcam Atl.Vend.Cci;;CRAV
+FR0000066607;031;Lacroix Sa;;LACR
+FR0000066177;031;Mines Lucette;;MILU
+FR0000066482;031;Tipiak;;TIPI
+FR0000045551;031;Crcam Morbihan Cci;;CMO
+FR0000066540;031;Vm Materiaux;;VMMA
+FR0000066441;031;Poujoulat(Ets);;POUJ
+FR0000066284;031;Ipo;;IPOA
+FR0000063091;032;Anf;;ANF
+FR0000063638;032;Sodice Expansion;;SODC
+FR0010340141;032;Adp;;ADP
+FR0000185514;032;Crcam Nord Cci;;CNF
