@@ -5,6 +5,13 @@ On the road for v0.4.5 (Nausicaa)
 
 ===============================================================================
 
+2006-09-13  Gilles Dumortier <dgil at ieee.org>
+	* Live : live -2 or 0 instead of ATP / MX  (SF bug 1557631)
+	* Live : Live: CMP can be empty !  (SF bug 1557629)
+
+2006-09-13  Michel Legrand <m_leg at users.sourceforge.net>
+	* Live: Updated data/places.txt file
+
 2006-09-12  Gilles Dumortier <dgil at ieee.org>
 	* Live : FMP Buy/Sell is inversed  (SF bug 1557356)
 	* Live : exception because Notebook can be limited (SF bug 1557368)
